# shooter

./: .gitignore  README.md  base_classes.py  main.py  prof.prof  pyproject.toml  run_profile.py
shaders/: compute.glsl  fragment.glsl
