[project]
name = "arcade-shooter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arcade>=3.3.3",
    "server-sync",
    "snakeviz>=2.2.2",
]

[tool.uv.sources]
server-sync = { git = "https://github.com/pro99d/server-sync" }
